ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 1.7.3
    • Affects Version/s: None
    • Component/s: None
    • None
    • Environment:
      db version v1.7.0-pre-, pdfile version 4.5
      Thu Sep 2 16:35:31 git version: b6321840dd39f96febef4e82de70dc2bb71075e5
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      I'm running the attached PHP script (drop collection, add 1000 elements, findOne) through ab with:

      $ ab -c 5 -n 1000 http://localhost/sample.php

      It causes a lot of errors that look like this in the db log:

      Thu Sep 2 16:30:24 [conn546] CMD: drop testDB.testColl
      Thu Sep 2 16:30:24 [conn536] CMD: drop testDB.testColl
      Thu Sep 2 16:30:24 [conn546] building new index on

      { _id: 1 }

      for testDB.testColl
      Thu Sep 2 16:30:24 [conn546] done for 0 records 0secs
      Thu Sep 2 16:30:24 [conn548] CMD: drop testDB.testColl
      Thu Sep 2 16:30:24 [conn536] Assertion: 13338:cursor dropped during query
      0x8153a5a 0x821084d 0x830f838 0x830fecd 0x8314973 0x831a7ea 0x831b203 0x831b97d 0x81fe5e7 0x82e0677 0x83ddade 0x81a1ef8 0x42ec1d 0x2e696e 0x6c6a4e
      ./mongod(_ZN5mongo11msgassertedEiPKc+0x20a) [0x8153a5a]
      ./mongod(_ZN5mongo11UserQueryOp16recoverFromYieldEv+0xdd) [0x821084d]
      ./mongod(_ZN5mongo12QueryPlanSet6Runner16recoverFromYieldERNS_7QueryOpE+0x38) [0x830f838]
      ./mongod(_ZN5mongo12QueryPlanSet6Runner8mayYieldERKSt6vectorIN5boost10shared_ptrINS_7QueryOpEEESaIS6_EE+0xcd) [0x830fecd]
      ./mongod(_ZN5mongo12QueryPlanSet6Runner3runEv+0x8a3) [0x8314973]
      ./mongod(_ZN5mongo12QueryPlanSet5runOpERNS_7QueryOpE+0x21a) [0x831a7ea]
      ./mongod(_ZN5mongo16MultiPlanScanner9runOpOnceERNS_7QueryOpE+0x6b3) [0x831b203]
      ./mongod(_ZN5mongo16MultiPlanScanner5runOpERNS_7QueryOpE+0x2d) [0x831b97d]
      ./mongod(ZN5mongo8runQueryERNS_7MessageERNS_12QueryMessageERNS_5CurOpES1+0xa17) [0x81fe5e7]
      ./mongod(_ZN5mongo16assembleResponseERNS_7MessageERNS_10DbResponseERKNS_8SockAddrE+0x1447) [0x82e0677]
      ./mongod(_ZN5mongo10connThreadEPNS_13MessagingPortE+0x2ee) [0x83ddade]
      ./mongod(_ZN5boost6detail11thread_dataINS_3_bi6bind_tIvPFvPN5mongo13MessagingPortEENS2_5list1INS2_5valueIS6_EEEEEEE3runEv+0x18) [0x81a1ef8]
      /usr/lib/libboost_thread-mt.so.1.38.0(thread_proxy+0x5d) [0x42ec1d]
      /lib/tls/i686/cmov/libpthread.so.0(+0x596e) [0x2e696e]
      /lib/tls/i686/cmov/libc.so.6(clone+0x5e) [0x6c6a4e]
      Thu Sep 2 16:30:24 [conn536] assertion 13338 cursor dropped during query ns:testDB.testColl query:

      { a: 500 }

      Thu Sep 2 16:30:24 [conn536] ntoskip:0 ntoreturn:-1
      Thu Sep 2 16:30:24 [conn548] building new index on

      { _id: 1 }

      for testDB.testColl
      Thu Sep 2 16:30:24 [conn548] done for 0 records 0secs

      The query is a findOne, so it seems weird that the cursor would be dropped during it.

            Assignee:
            Eliot Horowitz (Inactive)
            Reporter:
            Kristina Chodorow (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: