fix cursor usage when possible deleted SERVER-1721 SERVER-2075